# KPerf_TTA

./: .gitignore  .gitmodules  README.md  pyproject.toml
analysis/01_scan/: 00_summary.md  01_repo_overview.md  02_license_audit.md  03_dependencies.md  04_network_and_airgap.md
analysis/02_code_map/: 00_summary.md  01_packages.md  02_benchmark_call_chain.md  03_call_chain_verified.md  04_http_resolve_anatomy.md  05_metrics_accumulation.md
kperf/: __init__.py  runner.py
kperf/report/: __init__.py  html.py
